fixed some text wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,11 @@
   color: #fffffe;
   font-family: "Lato", sans-serif;
 }
+@media (max-width: 576px) {
+  .hero__text__title {
+    font-size: 1.2em;
+  }
+}
 .hero__text__description {
   font-family: "Oswald", sans-serif;
   color: #fffffe;
@@ -71,6 +76,12 @@
   color: #0f0e17;
   background-color: #ff8906;
 }
+@media (max-width: 576px) {
+  .hero__buttons a:first-child {
+    font-size: 0.7em;
+    padding: 0.3em;
+  }
+}
 .hero__buttons a:last-child {
   color: #fffffe;
   background-color: #e53170;
@@ -84,6 +95,12 @@
   color: #e53170;
   background-color: #fffffe;
   border: 2px solid #e53170;
+}
+@media (max-width: 576px) {
+  .hero__buttons a:last-child {
+    font-size: 0.7em;
+    padding: 0.3em;
+  }
 }
 
 .about {
@@ -107,16 +124,21 @@
   background: #0f0e17;
   border-radius: 16px;
   box-shadow: 0 4px 30px black;
-  border: 5px solid #ff8906;
+  border: 3px solid #ff8906;
 }
 .about__card h2 {
   color: #a7a9be;
   font-family: "Oswald", sans-serif;
-  padding-left: 1em;
 }
 .about__card h3 {
   font-family: "Lato", sans-serif;
   color: #e53170;
+}
+@media (max-width: 576px) {
+  .about__card {
+    margin: 2em auto;
+    width: 90% !important;
+  }
 }
 
 .top {
@@ -183,6 +205,12 @@
   background-color: #fffffe;
   border: 2px solid #ff8906;
 }
+@media (max-width: 576px) {
+  .top__card .project-card__body__btn {
+    font-size: 0.7em;
+    padding: 0.3em;
+  }
+}
 
 .project-card {
   padding-bottom: 30px;
@@ -235,6 +263,12 @@
   background-color: #fffffe;
   border: 2px solid #ff8906;
 }
+@media (max-width: 576px) {
+  .project-card__body__btn {
+    font-size: 0.7em;
+    padding: 0.3em;
+  }
+}
 
 .htf {
   background-color: #a7a9be;
@@ -272,6 +306,11 @@
   display: flex;
   justify-content: space-around;
   padding: 2em 1em;
+}
+@media (max-width: 576px) {
+  .footer__social-media a img {
+    width: 100px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
